--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "author": "Gabriel Brun",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.10.4",
     "docxtemplater": "^3.19.9",
     "eslint-scope": "^5.1.1",
     "eslint-utils": "^2.1.0",
