--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-visitor-keys": "^2.0.0",
     "isomorphic-fetch": "^3.0.0",
     "mime-types": "^2.1.28",
-    "pizzip": "^3.0.6"
+    "pizzip": "^3.0.6",
+    "shelljs": "^0.8.4"
   }
 }
