--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ output.docx
 *lock.output*
 *lock.CV*
 *CV\ Gabriel*
+src/app/CV\ Gabriel\ Brun\ développeur\ React.docx
+*CV\ Gabriel\ Brun\ développeur\ React.docx
